style.css
body {
    /* Image sourced from Windows Wallpapers */
    background-image: url('background.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
}

/* Icon bar */
.icon-bar {
    position: fixed;
    left: 40px;
    top: 30px;
}

.icon-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 14px;
}

.icon-button:hover {
    background: rgba(77, 140, 223, 0.6);
}

.icon-button span {
    /* Text outline effect */
    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
}

.icon-button button {
    font-size: 28px;
    background: none;
    border: none;
    cursor: pointer;
}

/* Draggable elements */
.Close {
    float: right;
    color: #FFF;
    font-size: 16px;
    background-color: red;
    padding: 0px 4px 0px;
    border-radius: 4px;
    border: 0px 4px 0px;
}

.draggable {
    display: none;
    position: absolute;
    z-index: 9;
    background-color: #f1f1f1;
    border: 1px solid #d3d3d3;
    border-radius: 5px;
    width: 500px;
    padding: 0px 0px 10px;
}

.draggable-header {
    padding: 0px 0px 10px;
    cursor: move;
    background-color: #2196F3;
    align-items: flex-start;
    color: #fff;
    user-select: none;
}

.header-text {
    display: inline-block;
    margin-top: 6px;
    margin-left: 2px;
    /* Pushes text downward slightly */
}

div.draggable p {
    margin-left: 10px;
    margin-right: 10px;
}

